--- a/cenderawasih.html
+++ b/cenderawasih.html
@@ -16,9 +16,7 @@
         .policy-item { border-left: 3px solid #16a34a; padding-left: 1rem; margin-top: 0.75rem; }
         .modal { display: none; }
         .modal.active { display: flex; }
-        .chart-container { position: relative; height: 300px; width: 100%; margin: auto; }
-        .pie-chart-container { position: relative; height: 350px; width: 100%; margin: auto; }
-        .observation-ref { font-size: 0.75rem; color: #57534e; font-style: italic; }
+        .chart-container { position: relative; height: 350px; width: 100%; margin: auto; }
         @keyframes fade-in {
             from { opacity: 0; transform: translateY(10px); }
             to { opacity: 1; transform: translateY(0); }
@@ -26,6 +24,7 @@
         .animate-fade-in {
             animation: fade-in 0.5s ease-out forwards;
         }
+        .observation-ref { font-size: 0.75rem; color: #57534e; font-style: italic; }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
@@ -70,7 +69,7 @@
             const estateData = {
                 "id": "cenderawasih",
                 "name": "Ladang Cenderawasih",
-                "reportInfo": "Data based on PA Report (Apr 2025) & Agronomy Report (Feb 2025).",
+                "reportInfo": "Data based on PA Report (Apr 2025), Agronomy Report (Feb 2025) & Pinfosys Report (Jan 2022).",
                 "summaryMetrics": {
                     "area": {
                         "title": "Estate Area",
@@ -152,6 +151,24 @@
                         "Agronomic Observation": "Harvesting intervals are slightly extended. Pruning is mostly complete, but some areas lagged in 2024. Rat infestations are significant. Potassium deficiency symptoms are visible. Ground vegetation is satisfactory. (Source: AR, Pg. 15-39)",
                         "Yield Performance": "Yield improved by 38% in 2024 to 22.71 mt/ha. The increase is attributed to palm age and improved agronomic inputs. Crop loss from rat damage is a concern. (Source: AR, Pg. 40-42)",
                         "Fertilizer Recommendation": "No changes to the 2025 fertilizer program. (Source: AR, Pg. 43)"
+                    },
+                    "pinfosys": {
+                        "CEO Financial Summary (Jan 2022)": "Total Income: RM 2,128,529.12<br>Estate Operating Profit: RM 1,674,787.30<br>Profit Margin: 78.7%<br>Net Current Assets: RM 21,692,955.71<br><span class='text-xs'>(Source: Pinfosys, Pg. 4, 136)</span>",
+                        "Summary of Oil Palm Expenditure (Jan 2022)": [
+                            { "item": "<strong>Upkeep & Cultivation</strong>", "cost_ha": "<strong>62.47</strong>", "cost_tonne": "<strong>63.31</strong>" },
+                            { "item": "&nbsp;&nbsp;&nbsp;Weeding", "cost_ha": "6.97", "cost_tonne": "7.08" },
+                            { "item": "&nbsp;&nbsp;&nbsp;Manuring", "cost_ha": "46.05", "cost_tonne": "46.77" },
+                            { "item": "&nbsp;&nbsp;&nbsp;Pest & Disease", "cost_ha": "0.72", "cost_tonne": "0.73" },
+                            { "item": "&nbsp;&nbsp;&nbsp;Census & Thinning Out", "cost_ha": "0.50", "cost_tonne": "0.51" },
+                            { "item": "&nbsp;&nbsp;&nbsp;Drains", "cost_ha": "0.05", "cost_tonne": "0.05" },
+                            { "item": "&nbsp;&nbsp;&nbsp;Roads & Bridges", "cost_ha": "4.06", "cost_tonne": "4.13" },
+                            { "item": "&nbsp;&nbsp;&nbsp;Pruning", "cost_ha": "0.91", "cost_tonne": "0.92" },
+                            { "item": "<strong>Harvesting & Collection</strong>", "cost_ha": "<strong>81.68</strong>", "cost_tonne": "<strong>82.78</strong>" },
+                            { "item": "&nbsp;&nbsp;&nbsp;Harvesting Labour", "cost_ha": "62.08", "cost_tonne": "62.99" },
+                            { "item": "&nbsp;&nbsp;&nbsp;Internal Transport", "cost_ha": "20.70", "cost_tonne": "20.99" },
+                            { "item": "<strong>General Charges (Prop.)</strong>", "cost_ha": "<strong>41.94</strong>", "cost_tonne": "<strong>42.50</strong>" },
+                            { "item": "<strong>Total Estate Expenditure</strong>", "cost_ha": "<strong>186.09</strong>", "cost_tonne": "<strong>188.60</strong>" }
+                        ]
                     }
                 },
                 "policy": " <div class='policy-item'><p class='font-semibold'>Pest Control (Rats)</p><p class='text-sm text-gray-600'><b>Policy Ref: P&D-Rat-01:</b> A rat census must be conducted quarterly. If fresh damage exceeds 10%, a baiting campaign must be initiated immediately.</p></div> <div class='policy-item'><p class='font-semibold'>Manuring & Fertilizing</p><p class='text-sm text-gray-600'><b>Policy Ref: FERT-APP-05:</b> Fertilizer application must adhere to the schedule. Delays due to weather should be mitigated by deploying additional resources once conditions improve.</p></div> <div class='policy-item'><p class='font-semibold'>Pruning & Harvesting</p><p class='text-sm text-gray-600'><b>Policy Ref: HARV-STD-02:</b> Harvesting intervals should not exceed 15 days to minimize over-ripe bunches and loose fruit loss.</p><p class='text-sm text-gray-600'><b>Policy Ref: PRUNE-STD-01:</b> Over-pruning is strictly prohibited. Field supervisors must ensure standards are met.</p></div>"
@@ -199,8 +216,8 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-4 mb-8">${summaryMetricsHTML}</div>
                         <div class="mb-8"><h3 class="text-xl font-semibold mb-4 border-b pb-2">Key Metrics & Agronomic Status</h3><div class="grid grid-cols-2 md:grid-cols-3 gap-4 mt-4">${keyMetricsHTML}</div></div>
                         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mb-8">
-                            <div><h3 class="text-xl font-semibold mb-2">Monthly Production vs Rainfall (2024)</h3><div class="chart-container"><canvas id="prodChart-${estate.id}"></canvas></div><p class="text-xs text-center text-gray-500 mt-2">${estate.chartData.production.note}</p></div>
-                            <div><h3 class="text-xl font-semibold mb-2">Palm Age Profile</h3><div class="pie-chart-container"><canvas id="ageChart-${estate.id}"></canvas></div><p class="text-xs text-center text-gray-500 mt-2">${estate.chartData.ageProfile.note}</p></div>
+                            <div class="chart-container"><h3 class="text-xl font-semibold mb-2 text-center">Monthly Production vs Rainfall (2024)</h3><canvas id="prodChart-${estate.id}"></canvas><p class="text-xs text-center text-gray-500 mt-2">${estate.chartData.production.note}</p></div>
+                            <div class="chart-container"><h3 class="text-xl font-semibold mb-2 text-center">Palm Age Profile</h3><canvas id="ageChart-${estate.id}"></canvas><p class="text-xs text-center text-gray-500 mt-2">${estate.chartData.ageProfile.note}</p></div>
                         </div>
                         <div class="mb-8"><h3 class="text-xl font-semibold mb-2 border-b pb-2">Key Observations & Issues</h3><ul class="list-disc list-inside space-y-2 text-gray-700 mt-4">${observationsHTML}</ul></div>
                         <div class="mb-8 text-center"><button class="policy-modal-btn bg-green-800 text-white px-6 py-3 rounded-lg hover:bg-green-900 transition shadow-md">View Agricultural Policy Cross-Reference</button></div>
@@ -209,6 +226,8 @@
                             <div id="${estate.id}-plantation" class="details-content bg-gray-50 p-4 rounded-md border border-gray-200"></div>
                             <button data-dropdown-id="${estate.id}-agronomy" class="dropdown-btn w-full text-left bg-gray-800 text-white p-3 rounded-md hover:bg-gray-700 transition">Agronomy Report Details</button>
                             <div id="${estate.id}-agronomy" class="details-content bg-gray-50 p-4 rounded-md border border-gray-200"></div>
+                            <button data-dropdown-id="${estate.id}-pinfosys" class="dropdown-btn w-full text-left bg-gray-800 text-white p-3 rounded-md hover:bg-gray-700 transition">Pinfosys Report Details</button>
+                            <div id="${estate.id}-pinfosys" class="details-content bg-gray-50 p-4 rounded-md border border-gray-200"></div>
                         </div>
                     </div>`;
             }
@@ -216,6 +235,7 @@
             function initializeChartsForEstate() {
                 const prodCanvasId = `prodChart-${estateData.id}`;
                 const ageCanvasId = `ageChart-${estateData.id}`;
+                
                 if (chartInstances[prodCanvasId]) chartInstances[prodCanvasId].destroy();
                 if (chartInstances[ageCanvasId]) chartInstances[ageCanvasId].destroy();
 
@@ -242,7 +262,7 @@
                             labels: estateData.chartData.ageProfile.labels,
                             datasets: [{ data: estateData.chartData.ageProfile.data, backgroundColor: ['#fde047', '#eab308'], hoverOffset: 4 }]
                         },
-                        options: { responsive: true, maintainAspectRatio: false, plugins: { title: { display: true, text: estateData.chartData.ageProfile.title, font: { size: 16 } }, legend: { position: 'right' } } }
+                        options: { responsive: true, maintainAspectRatio: false, plugins: { title: { display: true, text: estateData.chartData.ageProfile.title, font: { size: 14 } }, legend: { position: 'bottom' } } }
                     });
                 }
             }
@@ -250,11 +270,46 @@
             function populateInternalDropdowns() {
                 const agronomyDiv = document.getElementById(`${estateData.id}-agronomy`);
                 const plantationDiv = document.getElementById(`${estateData.id}-plantation`);
+                const pinfosysDiv = document.getElementById(`${estateData.id}-pinfosys`);
+
                 if (agronomyDiv && estateData.reports.agronomy) {
                     agronomyDiv.innerHTML = Object.entries(estateData.reports.agronomy).map(([section, content]) => `<h4 class="font-semibold mt-2 text-gray-800">${section.replace(/([A-Z])/g, ' $1').trim()}:</h4><p class="text-sm text-gray-600">${content}</p>`).join('');
                 }
                 if (plantationDiv && estateData.reports.plantation) {
                     plantationDiv.innerHTML = Object.entries(estateData.reports.plantation).map(([section, content]) => `<h4 class="font-semibold mt-2 text-gray-800">${section.replace(/([A-Z])/g, ' $1').trim()}:</h4><p class="text-sm text-gray-600">${content}</p>`).join('');
+                }
+                if (pinfosysDiv && estateData.reports.pinfosys) {
+                    let pinfosysHTML = '';
+                    for (const [section, content] of Object.entries(estateData.reports.pinfosys)) {
+                        pinfosysHTML += `<h4 class="font-semibold mt-2 text-gray-800">${section.replace(/([A-Z])/g, ' $1').trim()}:</h4>`;
+                        if (Array.isArray(content)) {
+                            pinfosysHTML += `
+                                <div class="overflow-x-auto">
+                                    <table class="min-w-full bg-white text-sm mt-2">
+                                        <thead class="bg-gray-200">
+                                            <tr>
+                                                <th class="px-4 py-2 text-left">Expenditure Item</th>
+                                                <th class="px-4 py-2 text-right">Cost / Hectare (RM)</th>
+                                                <th class="px-4 py-2 text-right">Cost / Tonne (RM)</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            ${content.map(row => `
+                                                <tr class="border-b">
+                                                    <td class="px-4 py-2">${row.item}</td>
+                                                    <td class="px-4 py-2 text-right">${row.cost_ha}</td>
+                                                    <td class="px-4 py-2 text-right">${row.cost_tonne}</td>
+                                                </tr>
+                                            `).join('')}
+                                        </tbody>
+                                    </table>
+                                    <p class="text-xs text-gray-500 mt-1 italic">Source: Pinfosys Report, Jan 2022, Pg. 173</p>
+                                </div>`;
+                        } else {
+                            pinfosysHTML += `<p class="text-sm text-gray-600">${content}</p>`;
+                        }
+                    }
+                    pinfosysDiv.innerHTML = pinfosysHTML;
                 }
             }
 
