--- a/estates.html
+++ b/estates.html
@@ -63,8 +63,9 @@
                 { id: 'delima', name: 'Ladang Delima', area: '2,792.65 ha' },
                 { id: 'dsk', name: 'Ladang DSK', area: '1,320.30 ha' },
                 { id: 'kampungaur', name: 'Ladang Kampung Aur', area: '2,056.70 ha' },
+                { id: 'rangkaian', name: 'Ladang Rangkaian', area: '1,392.50 ha' },
                 { id: 'sgbatu', name: 'Ladang Sungai Batu', area: '886.80 ha' },
-                { id: 'sggayung', name: 'Ladang Sungai Gayung', area: '2,289.20 ha' }, // Updated Area
+                { id: 'sggayung', name: 'Ladang Sungai Gayung', area: '2,289.20 ha' }, 
                 { id: 'sgmarung', name: 'Ladang Sungai Marung', area: '2,250.23 ha' },
                 { id: 'sgrasau', name: 'Ladang Sungai Rasau', area: '111.0 ha' },
                 { id: 'sgseraya', name: 'Ladang Sungai Seraya', area: '870.90 ha' },
