--- a/sgbatu.html
+++ b/sgbatu.html
@@ -65,7 +65,7 @@
             const estateData = {
                 "id": "sgbatu",
                 "name": "Ladang Sungai Batu",
-                "reportInfo": "Data based on Agronomy Report 1/2025 (Visit: 15th May 2025) & Plantation Advisory Report 1/2025.",
+                "reportInfo": "Data based on Agronomy Report 1/2025 (Visit: 15th May 2025) & Plantation Advisory Report 1/2025 (Visit: 28th May 2025).",
                 "summaryMetrics": {
                     "area": {
                         "title": "Total Area",
@@ -73,14 +73,14 @@
                         "note": "886.80 ha planted (mature)"
                     },
                     "yield": {
-                        "title": "Yield/Ha (YTD Apr)",
-                        "value": "6.50 MT/Ha",
-                        "note": "-8% vs 2024 (7.03 MT/Ha)"
+                        "title": "Yield/Ha (Actual vs Budget)",
+                        "value": "6.50 / 6.08 MT",
+                        "note": "YTD as of Apr 2025"
                     },
                     "cost": {
-                        "title": "Cost/Tonne (YTD Apr)",
-                        "value": "RM 244.92",
-                        "note": "-21% below budget (from PAR)"
+                        "title": "FFB Cost/Tonne (Actual vs Budget)",
+                        "value": "RM 244.92 / RM 310.12",
+                        "note": "Ex-Estate, YTD as of Apr 2025"
                     },
                     "upkeep": {
                         "title": "Key Agronomic Issue",
@@ -117,11 +117,12 @@
                 },
                 "observations": [
                     "<b>Yield Decline in Early 2025:</b> Despite a strong performance in 2024, the YTD April 2025 yield of 6.50 MT/Ha is 8% lower than the same period last year, a point of concern. <span class='observation-ref'>(AR Pg. 37)</span>",
-                    "<b>Delayed Upkeep Programs:</b> Field work is behind schedule, particularly circle weeding which was only 54% complete by April due to a manpower shortage. <span class='observation-ref'>(AR Pg. 24)</span>",
+                    "<b>Delayed Upkeep Programs:</b> Field work is behind schedule, particularly circle weeding which was only 54% complete by April due to a manpower shortage. Circle spraying programs have also been delayed. <span class='observation-ref'>(AR Pg. 24, PAR Pg. 16)</span>",
                     "<b>Suboptimal Nutrient Status:</b> Palm nutrient levels remain a key issue. 2024 leaf analysis showed N, P, K, and Mg levels were below optimum, with mild deficiency symptoms still visible in some areas. <span class='observation-ref'>(AR Pg. 22)</span>",
-                    "<b>Fertilizer Application Quality:</b> While the 2025 manuring program is 30% complete, the application quality for Mixture C was found to be suboptimal (narrow band) and required on-the-spot correction. <span class='observation-ref'>(AR Pg. 12-13)</span>",
-                    "<b>Low Harvester Productivity:</b> The average harvester productivity of 1.69 tons per man-day is considered low and needs attention, even though crop recovery is satisfactory. <span class='observation-ref'>(PAR Pg. 6)</span>",
-                    "<b>Favorable Production Cost:</b> On a positive note, the FFB cost of production (ex-estate) remains 21% lower than budget as of April. <span class='observation-ref'>(PAR Pg. 40)</span>"
+                    "<b>Fertilizer Application Quality & Schedule:</b> While the 2025 manuring program is 30% complete, the application quality for Mixture C was found to be suboptimal (narrow band) and required on-the-spot correction. The manuring program is behind schedule due to delays in fertilizer delivery. <span class='observation-ref'>(AR Pg. 12-13, PAR Pg. 28)</span>",
+                    "<b>Low Harvester Productivity:</b> The average harvester productivity of 1.69 tons per man-day is considered low and needs attention, even though crop recovery is satisfactory. <span class='observation-ref'>(PAR Pg. 6, 36)</span>",
+                    "<b>Favorable Production Cost:</b> On a positive note, the FFB cost of production (ex-estate) remains 21% lower than budget as of April. <span class='observation-ref'>(PAR Pg. 40)</span>",
+                    "<b>Pruning Quality:</b> The quality of pruning needs to be improved as dried hanging fronds were found in all fields. <span class='observation-ref'>(PAR Pg. 29)</span>"
                 ],
                 "reports": {
                     "agronomy": {
@@ -131,13 +132,13 @@
                         "Yield Performance": "2024 yield was excellent at 23.04 MT/ha, a 16% increase from 2023. However, the YTD April 2025 yield is 6.50 MT/ha, which is an 8% decrease compared to the same period in 2024. <span class='observation-ref'>(AR Pg. 35, 37)</span>",
                         "Fertilizer Recommendation": "There is no amendment to the 2025 fertilizer program. The 2026 program will be formulated based on new leaf nutrient analysis to be conducted this year. <span class='observation-ref'>(AR Pg. 39)</span>"
                     },
-                    "plantation": { // This data is preserved from the previous file
+                    "plantation": { 
                         "Executive Summary": "The estate's performance is acceptable. FFB production is higher than budget, and the cost of production is lower. However, the progress of weeding and manuring programs is slightly behind schedule. Harvesting standards have improved since the last visit. <span class='observation-ref'>(PAR Pg. 43)</span>",
                         "Area Statement": "Total planted area is 886.80 ha, all of which is mature. The age profile consists of 46.47% 'Old Mature Palms' (>=19 years) and 53.53% 'Prime Mature Palms'. The youngest palms are 13 years old. <span class='observation-ref'>(PAR Pg. 9)</span>",
                         "Labour Statement": "The total labour force of 67 workers is considered adequate, with a ratio of one worker to 13 ha. The harvester strength is also adequate at one harvester to 19 ha. The workforce is composed of 24% check-roll and 76% contract workers. <span class='observation-ref'>(PAR Pg. 10)</span>",
                         "Staff Establishment": "There has been no change in the staff establishment since the last visit, and the current complement is satisfactory. <span class='observation-ref'>(PAR Pg. 12)</span>",
                         "General Charges": "As of April, the expenditure on General Charges was RM 324.04/ha, which is 47% lower than the budget. <span class='observation-ref'>(PAR Pg. 13)</span>",
-                        "Upkeep and Cultivation": "Total upkeep cost was RM 379.76/ha, 51% lower than budget. Weeding programs are delayed. Manuring is behind schedule due to late fertilizer delivery. Pruning quality needs improvement. Ganoderma symptoms were observed. <span class='observation-ref'>(PAR Pg. 16, 28, 29)</span>",
+                        "Upkeep and Cultivation": "Total upkeep cost was RM 379.76/ha, 51% lower than budget. Weeding programs are delayed. Manuring is behind schedule due to late fertilizer delivery. Pruning quality needs improvement. Symptoms of Ganoderma were found in P05A, P06B and P07C. <span class='observation-ref'>(PAR Pg. 5, 16, 28, 29)</span>",
                         "Harvesting and Collection": "Harvesting intervals were maintained at 15 days, and the standard was acceptable with negligible missed fruits and bunches. The cost of harvesting and collection was RM 77.80/tonne, 4% lower than budget. <span class='observation-ref'>(PAR Pg. 33, 41)</span>",
                         "Crop Production": "YTD FFB production as of April was 5,760.75 tonnes (6.50 t/ha), which is 7% higher than the budget of 5,388.00 tonnes (6.08 t/ha). <span class='observation-ref'>(PAR Pg. 37)</span>",
                         "Production Cost": "The FFB cost of production ex-estate as of April was RM 244.92/tonne, which is 21% lower than the budget of RM 310.12/tonne. <span class='observation-ref'>(PAR Pg. 40)</span>",
@@ -171,10 +172,14 @@
             function createEstateHTML(estate) {
                 const summaryMetricsHTML = Object.values(estate.summaryMetrics).map(metric => {
                     const colorClass = metric.title.includes('Area') ? 'bg-blue-50 text-blue-800' :
-                                       metric.title.includes('Yield') ? 'bg-orange-50 text-orange-800' :
-                                       metric.title.includes('Cost') ? 'bg-emerald-50 text-emerald-800' :
+                                       metric.title.includes('Yield') ? 'bg-emerald-50 text-emerald-800' :
+                                       metric.title.includes('Cost') ? 'bg-orange-50 text-orange-800' :
                                        metric.title.includes('Upkeep') || metric.title.includes('Agronomic') ? 'bg-yellow-50 text-yellow-800' : 'bg-green-50 text-green-800';
-                    return `<div class="p-4 rounded-lg ${colorClass}"><h3 class="font-semibold">${metric.title}</h3><p class="text-2xl font-bold">${metric.value}</p><p class="text-xs text-gray-500 mt-1">${metric.note}</p></div>`;
+                    return `<div class="p-4 rounded-lg ${colorClass} flex flex-col justify-center">
+                                <h3 class="font-semibold text-sm">${metric.title}</h3>
+                                <p class="text-2xl font-bold">${metric.value}</p>
+                                <p class="text-xs text-gray-500 mt-1">${metric.note}</p>
+                            </div>`;
                 }).join('');
 
                 const keyMetricsHTML = estate.keyMetrics.map(metric => `
