--- a/sgmarung.html
+++ b/sgmarung.html
@@ -81,24 +81,24 @@
                         ]
                     },
                     "yield": {
-                        "title": "Yield/Ha (2024)",
-                        "value": "19.50 MT",
-                        "note": "+29.74% vs 2023"
+                        "title": "Yield/Ha (2024 vs 2023)",
+                        "value": "19.50 / 15.03 MT",
+                        "note": "A 29.74% increase from 2023"
                     },
                     "cost": {
-                        "title": "FFB Cost/Tonne (YTD March '25 vs Budget)",
+                        "title": "FFB Cost/Tonne (Actual vs Budget)",
                         "value": "RM 235.42 / RM 441.57",
-                        "note": "47% lower than budget"
-                    },
-                    "pest": {
-                        "title": "Key Pest Status",
-                        "value": "Under Control",
-                        "note": "Rat damage below threshold"
+                        "note": "YTD March '25, 47% lower than budget"
                     },
                      "upkeep": {
                         "title": "Upkeep Status",
                         "value": "Needs Improvement",
                         "note": "Harvesting & weeding issues"
+                    },
+                    "pest": {
+                        "title": "Key Pest Status",
+                        "value": "Under Control",
+                        "note": "Rat damage below threshold"
                     }
                 },
                 "keyMetrics": [
@@ -153,7 +153,8 @@
                         "Immature/Young Mature Plantings": "Significant supplying (36,170 palms) has been conducted in blocks P21A, P21B, P22D, and P24F due to flood damage. Growth is variable, with palms on higher ground showing better vigor. Over-pruning was noted. P24F includes a strategic watermelon intercropping project to reduce Ganoderma risk. (Source: AR, Pg. 56-70)",
                         "Yield Performance": "FFB yield increased by 29.74% in 2024 (19.50 MT/Ha) compared to 2023 (15.03 MT/Ha), mainly due to an increase in bunches per palm. However, yield is inconsistent and heavily impacted by seasonal flooding in low-lying areas, affecting crop evacuation. (Source: AR, Pg. 74-78)",
                         "Fertilizer Recommendation": "No changes to the 2025 fertilizer program. The estate is urged to minimize delays between scheduled and actual application. Recommendations are provided for new plantings. (Source: AR, Pg. 84)"
-                    }
+                    },
+                    "pinfosys": "Not Available"
                 },
                 "policy": " <div class='policy-item'><p class='font-semibold'>Replanting & Immature Upkeep</p><p class='text-sm text-gray-600'><b>Policy Ref: REPLANT-FLOOD-01:</b> In flood-prone areas, supplying should be deferred until floodwaters recede. Consider raising planting platforms or constructing bunds for future plantings.</p><p class='text-sm text-gray-600'><b>Policy Ref: UPKEEP-IM-02:</b> Basal frond pruning must be completed before scout harvesting begins.</p></div> <div class='policy-item'><p class='font-semibold'>Harvesting Standards</p><p class='text-sm text-gray-600'><b>Policy Ref: HARV-STD-03:</b> Complete collection of all loose fruits is mandatory. Supervisors must conduct daily checks.</p></div> <div class='policy-item'><p class='font-semibold'>Labour Management</p><p class='text-sm text-gray-600'><b>Policy Ref: HR-PROD-02:</b> Estates must monitor harvester productivity against targets. Implement training or review mechanization if consistently below target.</p></div>"
             };
@@ -178,7 +179,7 @@
                     const colorClass = metric.title.includes('Area') ? 'bg-blue-50 text-blue-800' : 
                                        metric.title.includes('Yield') ? 'bg-green-50 text-green-800' :
                                        metric.title.includes('Cost') ? 'bg-orange-50 text-orange-800' :
-                                       metric.title.includes('Pest') ? 'bg-indigo-50 text-indigo-800' : 'bg-yellow-50 text-yellow-800';
+                                       metric.title.includes('Upkeep') ? 'bg-red-50 text-red-800' : 'bg-yellow-50 text-yellow-800';
                     if (metric.lines) {
                         return `<div class="p-4 rounded-lg ${colorClass}"><h3 class="font-semibold">${metric.title}</h3>${metric.lines.map(line => `<p class="text-sm">${line}</p>`).join('')}</div>`;
                     }
@@ -210,6 +211,8 @@
                             <div id="${estate.id}-plantation" class="details-content bg-gray-50 p-4 rounded-md border border-gray-200"></div>
                             <button data-dropdown-id="${estate.id}-agronomy" class="dropdown-btn w-full text-left bg-gray-800 text-white p-3 rounded-md hover:bg-gray-700 transition">Agronomy Report Details</button>
                             <div id="${estate.id}-agronomy" class="details-content bg-gray-50 p-4 rounded-md border border-gray-200"></div>
+                            <button data-dropdown-id="${estate.id}-pinfosys" class="dropdown-btn w-full text-left bg-gray-800 text-white p-3 rounded-md hover:bg-gray-700 transition">Pinfosys Report Details</button>
+                            <div id="${estate.id}-pinfosys" class="details-content bg-gray-50 p-4 rounded-md border border-gray-200"></div>
                         </div>
                     </div>`;
             }
@@ -251,11 +254,24 @@
             function populateInternalDropdowns() {
                 const agronomyDiv = document.getElementById(`${estateData.id}-agronomy`);
                 const plantationDiv = document.getElementById(`${estateData.id}-plantation`);
+                const pinfosysDiv = document.getElementById(`${estateData.id}-pinfosys`);
+                
                 if (agronomyDiv && estateData.reports.agronomy) {
                     agronomyDiv.innerHTML = Object.entries(estateData.reports.agronomy).map(([section, content]) => `<h4 class="font-semibold mt-2 text-gray-800">${section.replace(/([A-Z])/g, ' $1').trim()}:</h4><p class="text-sm text-gray-600">${content}</p>`).join('');
+                } else if (agronomyDiv) {
+                    agronomyDiv.innerHTML = `<p class="text-sm text-gray-600">Not Available</p>`;
                 }
+
                 if (plantationDiv && estateData.reports.plantation) {
                     plantationDiv.innerHTML = Object.entries(estateData.reports.plantation).map(([section, content]) => `<h4 class="font-semibold mt-2 text-gray-800">${section.replace(/([A-Z])/g, ' $1').trim()}:</h4><p class="text-sm text-gray-600">${content}</p>`).join('');
+                } else if (plantationDiv) {
+                    plantationDiv.innerHTML = `<p class="text-sm text-gray-600">Not Available</p>`;
+                }
+
+                if (pinfosysDiv && estateData.reports.pinfosys === "Not Available") {
+                    pinfosysDiv.innerHTML = `<p class="text-sm text-gray-600">Not Available</p>`;
+                } else if (pinfosysDiv) {
+                    pinfosysDiv.innerHTML = `<p class="text-sm text-gray-600">Not Available</p>`;
                 }
             }
 
